# gtest

./: CMakeLists.txt  README.md  myfunctions.cpp  myfunctions.h  mytest.cpp
